NetBSD Problem Report #50883

From www@NetBSD.org  Wed Mar  2 18:00:24 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id D6A1D7ACD8
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  2 Mar 2016 18:00:24 +0000 (UTC)
Message-Id: <20160302180024.15C9D7ACDF@mollari.NetBSD.org>
Date: Wed,  2 Mar 2016 18:00:24 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/fs/efs/efs_vnops.c:625]: (style) Redundant condition:
X-Send-Pr-Version: www-1.0

>Number:         50883
>Category:       kern
>Synopsis:       src/sys/fs/efs/efs_vnops.c:625]: (style) Redundant condition:
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 02 18:05:00 +0000 2016
>Closed-Date:    Wed Mar 02 20:01:03 +0000 2016
>Last-Modified:  Wed Mar 02 20:01:03 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160302
>Organization:
>Environment:
>Description:
[src/sys/fs/efs/efs_vnops.c:625]: (style) Redundant condition: found. '!found || (found && ret==0)' is equivalent to '!found || ret==0'

Source code is

    KASSERT(!found || (found && ret == 0));

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50883 CVS commit: src/sys/fs/efs
Date: Wed, 2 Mar 2016 14:27:05 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Mar  2 19:27:05 UTC 2016

 Modified Files:
 	src/sys/fs/efs: efs_vnops.c

 Log Message:
 PR/50883: David Binderman: Remove redundant code.


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 src/sys/fs/efs/efs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 02 Mar 2016 20:01:03 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.