PR/50883: David Binderman: Remove redundant code.